Fix effective ant numbers text overlap with upgrade multiplier

--- a/Synergism.css
+++ b/Synergism.css
@@ -1969,6 +1969,7 @@ nav li:hover {
 
 #antELO {
     position: absolute;
+    white-space: pre;
 }
 
 #antUpgradeMultiplier {
